<resources>
    <string name="app_name">Session 1</string>
    <string name="button_atob">A to B</string>
    <string name="button_atoc">A to C</string>
    <string name="button_btoa">B to A</string>
    <string name="button_btod">B to D</string>
    <string name="button_ctoa">C to A</string>
    <string name="call">Llamar</string>
    <string name="mail">Mail</string>
    <string name="activity_b_title">Esto es la actividad B</string>
    <string name="button_for_result">Button For Result</string>
    <string name="type_text">Type text</string>
</resources>